<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTravel</string>
    <string name="action_settings">Settings</string>
    <string name="image_default">Image</string>
    <string name="title_activity_liste_nouvelles">ListeNouvelles</string>
    <string name="btnSeeMyPost">My posts</string>
    <string name="title_activity_details_nouvelle">DetailsNouvelle</string>
    <string name="btnDetailAddComment">Send</string>
    <string name="txtDetailPays">Pays :</string>
    <string name="txtDetailVille">Ville :</string>
    <string name="title_activity_my_news">Mes nouvelles</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="title_activity_mes_nouvelles_modifier">Modifier nouvelle</string>
    <string name="mes_nouvelles_modifier_sauvegarder_btn">Sauvegarder</string>
    <string name="title_activity_mes_nouvelles_ajouter">Ajouter nouvelle</string>
    <string name="element_deleted">Élément supprimé</string>
    <string name="element_not_deleted">Impossible de supprimer l\'élément</string>
    <string name="element_added">Élément ajouté</string>
    <string name="element_not_added">Impossible d\'ajouter l\'élément</string>
    <string name="element_modified">Élément modifié</string>
    <string name="element_not_modified">Impossible de modifier l\'élément</string>
    <string name="title_activity_mes_nouvelles_consulter">Détails nouvelle</string>
    <string name="txtMyNewsCommentary">Laisser un commentaire</string>
    <string name="txtMyNewsPosition">Votre position</string>
    <string name="txtLogin">Se connecter</string>
    <string name="txtYourEmail">Votre courriel</string>
    <string name="txtYourPassword">Mot de passe</string>
    <string name="txtAuthenticate">Authentification</string>
    <string name="btnOpenAccount">Ouvrir un compte</string>
    <string name="txtAuthenticating">Authentification...</string>
    <string name="alertFailedLogin">Échec de l\'authentification</string>
    <string name="title_activity_nouveau_compte">NouveauCompte</string>
    <string name="hintFirstName">Votre prenom</string>
    <string name="hintLastName">Votre nom</string>
    <string name="txtInfosPerso">Informations personnelles</string>
    <string name="hintRepeatPassword">Répéter mot de passe</string>
    <string name="txtNewAccountTitle">Nouveau compte</string>
    <string name="btnNewAccountSave">Enregister</string>
    <string name="btnNewAccountCancel">Annuler</string>
    <string name="alertSavingAccount">Sauvegarde du compte...</string>
    <string name="alertErrorSavingAccount">Il y a eu problème avec l\'enregistrement, veuillez essayer à nouveau.</string>
    <string name="alertMissingField">Veuillez remplir tout les champs.</string>
    <string name="alertPasswordsDiffer">Les mots de passes ne sont pas identique.</string>
    <string name="alertLoadingNews">Chargement des nouvelles.</string>
    <string name="timeHourAgo">heures</string>
    <string name="timeMinuteAgo">minutes</string>
    <string name="timeDayAgo">jours</string>
    <string name="txtPostedOn">Émis le</string>
    <string name="txtDetailCommentLabel">Commentaire du voyageur</string>
    <string name="title_activity_liste_voyageurs">ListeVoyageurs</string>
    <string name="chkFollow">Suivre</string>
    <string name="btnSubscribe">S\'abonner aux comptes</string>

</resources>
