<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scaleType="centerCrop"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtMainAuthenticate"
            style="@style/medium_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAuthenticate"
            android:textColor="#fff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtMainEmail"
            style="@style/input"
            android:ems="10"
            android:hint="@string/txtYourEmail"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edtMainPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtYourPassword"
            android:textColor="#fff"
            android:textColorHint="#a8dbff" 
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnMainLogin"
            style="@style/button_text"
            android:text="@string/txtLogin" />

        <Button
            android:id="@+id/btnMainNewAccount"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOpenAccount" />

    </LinearLayout>

</RelativeLayout>
