<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFF"
    tools:context=".MesNouvellesAjouter" >
	
    <ScrollView
        android:scrollbars="none"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
   <LinearLayout
        android:id="@+id/mes_nouvelles_ajouter_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/mes_nouvelles_ajouter_image"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:src="@drawable/thumbnail_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/mes_nouvelles_ajouter_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8E8E8"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtAjoutMesNouvellesCommentaire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtMyNewsCommentary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="71dp" >

                <EditText
                    android:id="@+id/mes_nouvelles_ajouter_commentaire_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    tools:text="Commentaire" >

                    <requestFocus />
                </EditText>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8E8E8"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtAjoutMesNouvellesPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtMyNewsPosition" />

            <TextView
                android:id="@+id/mes_nouvelles_ajouter_position_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF" />

        </LinearLayout>

    <Button
        android:id="@+id/mes_nouvelles_ajouter_sauvegarder_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/mes_nouvelles_modifier_sauvegarder_btn" />
    
    
    </LinearLayout>
	</ScrollView>
</RelativeLayout>
